kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "nuagir-cvere-backend-config"}'
  name: cip-service
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: deployment
  sessionAffinity: None
  type: ClusterIP
