kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller
  annotations:
    cert-manager.io/issuer: "cvere-client-letsencrypt-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cvere.lab.nuagir.com
      secretName: cvere-client-letsencrypt-certificate-secret
  rules:
    - host: cvere.lab.nuagir.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvere-cip-service
                port:
                  number: 8080
